--- a/src/stylesheets/StringDisplay.css
+++ b/src/stylesheets/StringDisplay.css
@@ -38,7 +38,8 @@
   font-size: 18px;
   cursor: grab;
   border: 0.5px solid transparent;
-  padding: 2px;
+  border-radius: 5px;
+  padding: 4px;
 }
 
 .line:hover {
