--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
   background-color: #282c34;
-  height: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
 }
 
 .App-logo {
